--- a/custom_components/eufy_security/translations/en.json
+++ b/custom_components/eufy_security/translations/en.json
@@ -8,6 +8,13 @@
           "host": "Host IP Address (eg 192.168.178.22)",
           "port": "Port (eg 3000)"
         }
+      },
+      "reauth_confirm": {
+        "title": "Eufy Security: Captcha",
+        "description": "{captcha_image}",
+        "data": {
+          "captcha": "Captcha"
+        }
       }
     },
     "error": {
@@ -27,7 +34,12 @@
           "rtsp_server_address": "Host IP Address for RTSP Add On (P2P)",
           "rtsp_server_port": "TCP Port for RTSP Add On (P2P)",
           "ffmpeg_analyze_duration": "Video Analzyze Duration in seconds [1 to 5] (P2P)",
-          "auto_start_stream": "Auto Start Stream on Click"
+          "auto_start_stream": "Auto Start Stream on Click",
+          "fix_binary_sensor_state": "Fix Binary Sensor States (True/False to On/Off)",
+          "map_extra_alarm_modes": "Map Custom Guard Modes into Bypass, Night and Vacation (in order)",
+          "name_for_custom1": "Override Name for Custom1 Guard Mode",
+          "name_for_custom2": "Override Name for Custom2 Guard Mode",
+          "name_for_custom3": "Override Name for Custom3 Guard Mode"
         }
       }
     }
